deployment/overlays/baseline-secure/security-context.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: all-deployments
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: ".*"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
